--- a/res/layout/activity_interval.xml
+++ b/res/layout/activity_interval.xml
@@ -229,26 +229,34 @@
                     android:id="@+id/adViewInterval2"
                     app:adSize="BANNER"
                     app:adUnitId="@string/adId2"
-                    android:layout_above="@+id/layoutBottomButtons"
+                    android:layout_above="@+id/buttonDismissInterval"
                     android:layout_marginBottom="@dimen/eight"
                     />
 
 
-    <LinearLayout android:layout_alignParentBottom="true"
-                  android:id="@+id/layoutBottomButtons"
-                  android:orientation="horizontal"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content" >
-            <Button android:text="@string/delete" android:layout_marginRight="@dimen/four_dp"
+            <View android:id="@+id/strut"
+                  android:layout_width="0dp"
+                  android:layout_height="0dp"
+                  android:layout_alignParentBottom="true"
+                  android:layout_centerHorizontal="true"/>
+            <Button android:text="@string/delete"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignRight="@id/strut"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginRight="@dimen/four_dp"
                     android:textColor="@color/white_back" android:textStyle="bold"
                     android:id="@+id/buttonDismissInterval" android:background="@drawable/close_button_selector"
-                    android:layout_weight="1" android:layout_width="@dimen/zero"
+                     android:layout_width="@dimen/zero"
                     android:layout_height="@dimen/standard_view_height"/>
-            <Button android:text="@string/save" android:textColor="@color/white_back" android:textStyle="bold"
-                    android:id="@+id/buttonSaveRunWithIntervals" android:background="@drawable/plus_minus_selector"
-                    android:layout_weight="1" android:layout_width="@dimen/zero"
+            <Button android:text="@string/save"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignLeft="@id/strut"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/white_back" android:textStyle="bold"
+                    android:id="@+id/buttonSaveRunWithIntervals"
+                    android:background="@drawable/plus_minus_selector"
+                     android:layout_width="@dimen/zero"
                     android:layout_height="@dimen/standard_view_height"/>
-        </LinearLayout>
         </RelativeLayout>
 
 </ViewFlipper>
