--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="android:typeface">monospace</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:textColor">@color/white_back</item>
     </style>
 
     <style name="spinner_style">
