--- a/res/layout/frg_settings.xml
+++ b/res/layout/frg_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:padding="@dimen/margin10"
+              android:padding="@dimen/ten_device_pixels"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -26,7 +26,7 @@
             style="@style/buttonStyle"
             android:background="@drawable/close_button_selector"
             android:layout_alignParentBottom="false"
-            android:layout_marginBottom="@dimen/margin10"
+            android:layout_marginBottom="@dimen/ten_device_pixels"
             android:text="@string/login"/>
 
 
