--- a/res/layout/list_common_row.xml
+++ b/res/layout/list_common_row.xml
@@ -2,7 +2,7 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="10dp" android:minHeight="@dimen/standard_view_height"
+                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="@dimen/ten_device_pixels" android:minHeight="@dimen/standard_view_height"
         >
 
     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
