--- a/res/layout/custom_plans_spinner_item.xml
+++ b/res/layout/custom_plans_spinner_item.xml
@@ -1,19 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="@dimen/eight" android:minHeight="44dp"
+                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="@dimen/eight" android:minHeight="@dimen/standard_view_height"
         >
-
-    <ImageView android:id="@+id/planIconSpinner"
-               android:layout_width="wrap_content" android:layout_height="wrap_content"
-               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="@dimen/eight"
-               android:src="@drawable/plan_50"/>
-
-
-    <TextView android:textStyle="bold" android:layout_toRightOf="@+id/planIconSpinner" android:layout_centerVertical="true" android:id="@+id/planDescriptionSpinner" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
-
-    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" android:textColor="@color/secondary_grey" android:layout_marginRight="@dimen/four_dp"/>
-
-
+    <TextView android:layout_centerInParent="true" android:id="@+id/planDescriptionSpinner" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
 </RelativeLayout>
