--- a/res/layout/list_plan_row.xml
+++ b/res/layout/list_plan_row.xml
@@ -7,7 +7,7 @@
 
     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="@dimen/eight"
-               android:src="@drawable/interval_50" android:id="@+id/rowIcon"/>
+               android:src="@drawable/plan_32" android:id="@+id/rowIcon"/>
 
 
 
