--- a/res/layout/frg_plans.xml
+++ b/res/layout/frg_plans.xml
@@ -97,7 +97,7 @@
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/no_plans"
-                  android:textSize="20sp"
+                  android:textSize="@dimen/large_text"
                   android:drawableBottom="@drawable/empty_100"/>
 
         <Button
