first commit of login feature

--- a/res/layout/frg_settings.xml
+++ b/res/layout/frg_settings.xml
@@ -19,6 +19,7 @@
               android:layout_height="wrap_content"/>
 
     <Button android:layout_above="@+id/contactButton"
+            android:visibility="invisible"
             android:id="@+id/loginButton"
             android:drawableStart="@drawable/login_50"
             android:drawableLeft="@drawable/login_50"
