--- a/res/layout/frg_friends.xml
+++ b/res/layout/frg_friends.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+
+    <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:id="@+id/friends_flipper"
+                 android:background="@color/primary_grey"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent">
+
+<LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-        android:background="@color/primary_grey">
-
-
+             >
     <EditText
             android:textColorHint="@android:color/darker_gray"
             android:singleLine="true"
@@ -61,3 +68,16 @@
 
 
 </LinearLayout>
+
+
+<LinearLayout
+android:padding="2dp" android:layout_margin="6dp"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="horizontal" >
+<EditText android:paddingLeft="4dp" android:layout_gravity="center_vertical|left"  android:textColor="@color/primary_grey" android:background="@android:color/white" android:layout_weight="2" android:id="@+id/editNewFriend"  android:drawablePadding="4dp" android:layout_width="0dp" android:layout_height="48dp" android:hint="search friend"/>
+<Button android:layout_gravity="center_vertical" android:textColor="@color/white_back"   android:layout_weight="1" android:id="@+id/buttonAddFriend"  android:layout_width="0dp" android:background="@drawable/bottom_button_background" android:text="Add" android:layout_height="wrap_content" />
+</LinearLayout>
+
+
+</ViewFlipper>
