--- a/res/layout/frg_settings.xml
+++ b/res/layout/frg_settings.xml
@@ -9,7 +9,7 @@
             android:src="@drawable/interval_100"
             android:layout_centerInParent="true"/>
 
-    <TextView android:layout_above="@+id/loginButton"
+    <TextView android:layout_above="@+id/contactButton"
               android:layout_centerHorizontal="true"
               android:layout_marginBottom="@dimen/eight"
               android:textSize="@dimen/small_text"
@@ -17,18 +17,6 @@
               android:layout_width="wrap_content"
               android:clickable="true"
               android:layout_height="wrap_content"/>
-
-    <Button android:layout_above="@+id/contactButton"
-            android:visibility="invisible"
-            android:id="@+id/loginButton"
-            android:drawableStart="@drawable/login_50"
-            android:drawableLeft="@drawable/login_50"
-            android:paddingLeft="@dimen/eight"
-            style="@style/buttonStyle"
-            android:background="@drawable/close_button_selector"
-            android:layout_alignParentBottom="false"
-            android:layout_marginBottom="@dimen/ten_device_pixels"
-            android:text="@string/login"/>
 
 
 
