--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="eight">8dp</dimen>
     <dimen name="four_dp">4dp</dimen>
     <dimen name="standard_view_height">48dp</dimen>
+    <dimen name="request_view_height">68dp</dimen>
     <dimen name="map_icon_size">100dp</dimen>
     <dimen name="list_view_height">64dp</dimen>
     <dimen name="circular_button_size">70dp</dimen>
